[gd_scene load_steps=5 format=3 uid="uid://i0h6daa00pjv"]

[ext_resource type="Script" path="res://scenes/crash/crash_scene.gd" id="1_kcixg"]
[ext_resource type="FontFile" uid="uid://c13p0rq5k801e" path="res://fonts/space_mono/SpaceMono-Regular.ttf" id="2_qniu2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b3bjp"]
bg_color = Color(0.411765, 0.647059, 0.682353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8rfx"]
bg_color = Color(0.505882, 0.552941, 0.976471, 1)

[node name="Crash" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kcixg")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = -151.0
offset_right = 274.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ConsoleBody" type="RichTextLabel" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 5.0
offset_right = -6.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
theme_override_fonts/normal_font = ExtResource("2_qniu2")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
selection_enabled = true

[node name="CopyButton" type="Button" parent="Panel"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -85.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Open Log File"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -273.0
offset_top = 22.0
offset_right = 273.0
offset_bottom = 94.0
grow_horizontal = 2

[node name="Label" type="Label" parent="VBoxContainer"]
offset_right = 546.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Teleorb has crashed. Please report this bug on github."
horizontal_alignment = 1

[node name="Fun" type="Label" parent="VBoxContainer"]
offset_top = 35.0
offset_right = 546.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0.545098, 0.545098, 0.545098, 1)
theme_override_font_sizes/font_size = 10
text = "sample text"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -93.0
offset_right = 272.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0

[node name="ReportBug" type="Button" parent="HBoxContainer"]
offset_right = 441.0
offset_bottom = 56.0
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_b3bjp")
theme_override_styles/hover = SubResource("StyleBoxFlat_q8rfx")
text = "Report Bug"

[node name="CloseGame" type="Button" parent="HBoxContainer"]
offset_left = 445.0
offset_right = 544.0
offset_bottom = 56.0
text = "Close Game"

[connection signal="pressed" from="Panel/CopyButton" to="." method="_on_copy_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ReportBug" to="." method="_on_report_bug_pressed"]
[connection signal="pressed" from="HBoxContainer/CloseGame" to="." method="_on_close_game_pressed"]
